set(HEADER_FILES
    actor/actor_features/ai/ai.h
    actor/actor_features/ai/ai_type.h
    actor/actor_features/ai/monster_ai.h
    actor/actor_features/openable/openable.h
    actor/actor_features/openable/openable_container.h
    actor/actor_features/openable/openable_door.h
    actor/actor_features/openable/openable_type.h
    actor/actor_features/wearer/item_slot_type.h
    actor/actor_features/wearer/wearer.h
    actor/actor_features/actor_feature.h
    actor/actor_features/container.h
    actor/actor_features/fighter.h
    actor/actor_features/pickable.h
    actor/actor_features/pickable_category.h
    actor/actor_features/destroyable.h
    actor/actor_features/drop_rule.h
    actor/effects/effect.h
    actor/effects/effect_type.h
    actor/effects/lock_effect.h
    actor/effects/self_heal_effect.h
    actor/actor.h
    actor/actor_type.h
    commands/cmd_help.h
    commands/cmd_close.h
    commands/cmd_fullscreen.h
    commands/cmd_inventory.h
    commands/cmd_move.h
    commands/cmd_open.h
    commands/cmd_pick.h
    commands/cmd_use.h
    commands/command.h
    commands/cmd_put_into.h
    commands/cmd_look.h
    data_gateways/descriptions/tile_description.h
    data_gateways/parsers/parser.h
    data_gateways/parsers/tile_parser.h
    data_gateways/parsers/tile_parser.cpp
    data_gateways/parsers/actor_parser.h
    data_gateways/parsers/map_parser.h
    data_gateways/serializers/serializer.h
    data_gateways/serializers/map_serializer.h
    data_gateways/actor_db.h
    data_gateways/actor_descriptions.h
    data_gateways/map_gateway.h
    data_gateways/tile_db.h
    gui/window/inventory_window/inventory_panel.h
    gui/window/inventory_window/bag_manager.h
    gui/window/inventory_window/body_manager.h
    gui/window/inventory_window/inventory_window.h     
    gui/window/amount_window.h
    gui/window/window_manager.h
    gui/gui.h
    gui/message_box.h
    gui/window/pick_up_window.h
    gui/window/text_window/text_window.h
    gui/window/text_window/resizeable_text_window.h
    gui/window/awindow.h
    gui/window/menu_window.h
    utils/target_selector/executor_selector.h
    utils/target_selector/single_neighbour_selector.h
    utils/target_selector/single_range_selector.h
    utils/target_selector/target_selector.h
    utils/colored_string.h
    utils/direction_selector.h
    utils/messenger.h
    utils/selector_type.h
    utils/utils.h
    utils/configuration.h
    utils/xml_utils.h
    utils/amarlon_except.h
    world/map.h
    world/map_id.h
    world/tile_type.h
    command_executor.h
    engine.h
    actor/actor_actions/actor_action.h
    actor/actor_actions/move_action.h
    actor/actor_actions/attack_action.h
    actor/actor_actions/pickup_action.h
    actor/actor_actions/drop_action.h
)

set(SOURCE_FILES
    actor/actor_features/ai/ai.cpp
    actor/actor_features/ai/monster_ai.cpp
    actor/actor_features/openable/openable.cpp
    actor/actor_features/openable/openable_container.cpp
    actor/actor_features/openable/openable_door.cpp
    actor/actor_features/wearer/wearer.cpp
    actor/actor_features/actor_feature.cpp
    actor/actor_features/container.cpp
    actor/actor_features/fighter.cpp
    actor/actor_features/pickable.cpp
    actor/actor_features/destroyable.cpp
    actor/effects/effect.cpp
    actor/effects/lock_effect.cpp
    actor/effects/self_heal_effect.cpp
    actor/actor.cpp
    commands/cmd_help.cpp
    commands/cmd_close.cpp
    commands/cmd_fullscreen.cpp
    commands/cmd_inventory.cpp
    commands/cmd_move.cpp
    commands/cmd_open.cpp
    commands/cmd_pick.cpp
    commands/cmd_use.cpp
    commands/command.cpp
    commands/cmd_put_into.cpp
    commands/cmd_look.cpp
    data_gateways/parsers/actor_parser.cpp
    data_gateways/parsers/map_parser.cpp
    data_gateways/serializers/map_serializer.cpp
    data_gateways/actor_db.cpp
    data_gateways/map_gateway.cpp
    data_gateways/tile_db.cpp
    gui/window/inventory_window/bag_manager.cpp
    gui/window/inventory_window/body_manager.cpp
    gui/window/inventory_window/inventory_window.cpp
    gui/window/amount_window.cpp
    gui/window/window_manager.cpp
    gui/window/menu_window.cpp
    gui/gui.cpp
    gui/window/pick_up_window.cpp
    gui/window/text_window/text_window.cpp
    gui/window/text_window/resizeable_text_window.cpp    
    utils/target_selector/executor_selector.cpp
    utils/target_selector/single_neighbour_selector.cpp
    utils/target_selector/target_selector.cpp
    utils/target_selector/single_range_selector.cpp
    utils/direction_selector.cpp
    utils/messenger.cpp
    utils/utils.cpp
    utils/configuration.cpp
    world/map.cpp
    command_executor.cpp
    engine.cpp
    main.cpp
    actor/actor_actions/move_action.cpp
    actor/actor_actions/attack_action.cpp
    actor/actor_actions/pickup_action.cpp
    actor/actor_actions/drop_action.cpp
)

add_library(amarlon_core STATIC ${SOURCE_FILES} ${HEADER_FILES})
target_link_libraries(amarlon_core ${TCOD_LIBRARIES})

add_executable(amarlon main.cpp)
target_link_libraries(amarlon amarlon_core amarlon_widgets ${TCOD_LIBRARIES})

add_custom_command(TARGET amarlon POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/resources $<TARGET_FILE_DIR:amarlon>)
