set(HEADER_FILES
    actor/actor_features/ai/ai.h    
    actor/actor_features/ai/ai_factory.h
    actor/actor_features/ai/monster_ai.h
    actor/actor_features/openable/openable.h
    actor/actor_features/openable/openable_container.h
    actor/actor_features/openable/openable_door.h    
    actor/actor_features/openable/openable_factory.h
    actor/actor_features/wearer/item_slot_type.h
    actor/actor_features/wearer/wearer.h
    actor/actor_features/actor_feature.h
    actor/actor_features/container/container.h
    actor/actor_features/character/character.h
    actor/actor_features/character/monster.h
    actor/actor_features/character/playable_character.h
    actor/actor_features/character/character_factory.h
    actor/actor_features/pickable/pickable.h
    actor/actor_features/pickable/pickable_category.h
    actor/actor_features/destroyable/destroyable.h
    actor/actor_features/destroyable/drop_rule.h
    effects/effect.h
    effects/effect_type.h
    effects/lock_effect.h
    effects/heal_effect.h
    effects/damage_effect.h
    actor/actor.h
    actor/actor_type.h
    commands/cmd_help.h
    commands/cmd_close.h
    commands/cmd_fullscreen.h
    commands/cmd_inventory.h
    commands/cmd_move.h
    commands/cmd_open.h
    commands/cmd_pick.h
    commands/cmd_use.h
    commands/command.h
    commands/cmd_put_into.h
    commands/cmd_look.h
    commands/cmd_cast.h
    data_gateways/descriptions/tile_description.h
    data_gateways/parsers/parser.h
    data_gateways/parsers/tile_parser.h
    data_gateways/parsers/spell_parser.h
    data_gateways/parsers/effect_parser.h
    data_gateways/parsers/actor_parser.h
    data_gateways/parsers/map_parser.h
    data_gateways/parsers/animation_parser.h
    data_gateways/serializers/serializer.h
    data_gateways/serializers/animation_serializer.h
    data_gateways/serializers/map_serializer.h
    data_gateways/serializers/action_serializer.h
    data_gateways/serializers/actor_serializer.h
    data_gateways/serializers/effect_serializer.h
    data_gateways/serializers/spell_serializer.h
    data_gateways/serializers/actor_feature_serializers/actor_feature_serializer.h
    data_gateways/serializers/actor_feature_serializers/pickable_serializer.h
    data_gateways/serializers/actor_feature_serializers/destroyable_serializer.h
    data_gateways/serializers/actor_feature_serializers/container_serializer.h
    data_gateways/serializers/actor_feature_serializers/wearer_serializer.h
    data_gateways/serializers/actor_feature_serializers/openable_serializer.h
    data_gateways/serializers/actor_feature_serializers/openable_door_serializer.h
    data_gateways/serializers/actor_feature_serializers/openable_container_serializer.h
    data_gateways/serializers/actor_feature_serializers/character_serializer.h
    data_gateways/serializers/actor_feature_serializers/monster_serializer.h
    data_gateways/serializers/actor_feature_serializers/playable_character_serializer.h
    data_gateways/serializers/actor_feature_serializers/ai_serializer.h
    data_gateways/serializers/actor_feature_serializers/monster_ai_serializer.h
    data_gateways/actor_db.h
    data_gateways/descriptions/animation_description.h
    data_gateways/descriptions/actor_descriptions.h
    data_gateways/descriptions/effect_description.h
    data_gateways/descriptions/spell_description.h
    data_gateways/descriptions/description.h
    data_gateways/map_gateway.h
    data_gateways/tile_db.h
    data_gateways/spell_gateway.h
    gui/window/inventory_window/inventory_panel.h
    gui/window/inventory_window/bag_manager.h
    gui/window/inventory_window/body_manager.h
    gui/window/inventory_window/inventory_window.h     
    gui/window/inventory_window/character_info_panel.h
    gui/window/amount_window.h
    gui/window/window_manager.h
    gui/gui.h
    gui/message_box.h
    gui/window/pick_up_window.h
    gui/window/text_window/text_window.h
    gui/window/text_window/fixed_size_text_window.h
    gui/window/text_window/resizeable_text_window.h
    gui/window/awindow.h
    gui/window/menu_window.h
    utils/target_selector/executor_selector.h
    utils/target_selector/single_neighbour_selector.h
    utils/target_selector/single_range_selector.h
    utils/target_selector/target_selector.h
    utils/colored_string.h
    utils/direction_selector.h
    utils/messenger.h
    utils/target_type.h
    utils/utils.h
    utils/configuration.h
    utils/xml_utils.h
    utils/amarlon_except.h
    utils/dices.h
    utils/text_formater.h
    utils/base64.h
    utils/target.h
    world/map.h
    world/map_id.h
    world/tile_type.h
    world/tile.h
    command_executor.h
    engine.h
    actor/actor_actions/actor_action.h
    actor/actor_actions/move_action.h
    actor/actor_actions/monster_move_action.h
    actor/actor_actions/attack_action.h
    actor/actor_actions/pickup_action.h
    actor/actor_actions/drop_action.h
    actor/actor_actions/close_action.h
    actor/actor_actions/open_action.h
    actor/actor_actions/equip_action.h
    actor/actor_actions/unequip_action.h
    actor/actor_actions/teleport_action.h
    actor/actor_actions/use_action.h
    actor/actor_actions/die_action.h
    actor/actor_actions/cast_action.h
    world/directions.h
    world/world.h
    rpg_system/ability_scores.h
    rpg_system/character_classes.h
    rpg_system/attack_bonus_table.h
    rpg_system/saving_throws_table.h
    rpg_system/experience_table.h
    rpg_system/races.h
    rpg_system/carrying_capacity.h
    spells/spell.h
    spells/spell_id.h
    animations/animation.h
    animations/animation_type.h
    animations/blink.h
    animations/throw.h
)

set(SOURCE_FILES
    actor/actor_features/ai/ai.cpp
    actor/actor_features/ai/ai_factory.cpp
    actor/actor_features/ai/monster_ai.cpp
    actor/actor_features/openable/openable.cpp
    actor/actor_features/openable/openable_container.cpp
    actor/actor_features/openable/openable_door.cpp
    actor/actor_features/openable/openable_factory.cpp
    actor/actor_features/wearer/wearer.cpp
    actor/actor_features/actor_feature.cpp
    actor/actor_features/container/container.cpp
    actor/actor_features/character/character.cpp
    actor/actor_features/character/monster.cpp
    actor/actor_features/character/playable_character.cpp
    actor/actor_features/character/character_factory.cpp
    actor/actor_features/pickable/pickable.cpp
    actor/actor_features/destroyable/destroyable.cpp
    effects/effect.cpp
    effects/lock_effect.cpp
    effects/heal_effect.cpp
    effects/damage_effect.cpp
    actor/actor.cpp
    commands/cmd_help.cpp
    commands/cmd_close.cpp
    commands/cmd_fullscreen.cpp
    commands/cmd_inventory.cpp
    commands/cmd_move.cpp
    commands/cmd_open.cpp
    commands/cmd_pick.cpp
    commands/cmd_use.cpp
    commands/command.cpp
    commands/cmd_put_into.cpp
    commands/cmd_look.cpp
    commands/cmd_cast.cpp
    data_gateways/parsers/animation_parser.cpp
    data_gateways/parsers/actor_parser.cpp
    data_gateways/parsers/tile_parser.cpp
    data_gateways/parsers/map_parser.cpp
    data_gateways/parsers/effect_parser.cpp
    data_gateways/parsers/spell_parser.cpp
    data_gateways/serializers/animation_serializer.cpp
    data_gateways/serializers/map_serializer.cpp
    data_gateways/serializers/action_serializer.cpp
    data_gateways/serializers/actor_serializer.cpp
    data_gateways/serializers/effect_serializer.cpp
    data_gateways/serializers/spell_serializer.cpp
    data_gateways/serializers/actor_feature_serializers/pickable_serializer.cpp
    data_gateways/serializers/actor_feature_serializers/destroyable_serializer.cpp
    data_gateways/serializers/actor_feature_serializers/container_serializer.cpp
    data_gateways/serializers/actor_feature_serializers/wearer_serializer.cpp
    data_gateways/serializers/actor_feature_serializers/openable_serializer.cpp
    data_gateways/serializers/actor_feature_serializers/openable_door_serializer.cpp
    data_gateways/serializers/actor_feature_serializers/openable_container_serializer.cpp
    data_gateways/serializers/actor_feature_serializers/character_serializer.cpp
    data_gateways/serializers/actor_feature_serializers/monster_serializer.cpp
    data_gateways/serializers/actor_feature_serializers/playable_character_serializer.cpp
    data_gateways/serializers/actor_feature_serializers/ai_serializer.cpp
    data_gateways/serializers/actor_feature_serializers/monster_ai_serializer.cpp
    data_gateways/actor_db.cpp
    data_gateways/map_gateway.cpp
    data_gateways/tile_db.cpp
    data_gateways/spell_gateway.cpp
    gui/window/inventory_window/bag_manager.cpp
    gui/window/inventory_window/body_manager.cpp
    gui/window/inventory_window/inventory_window.cpp
    gui/window/inventory_window/character_info_panel.cpp
    gui/window/amount_window.cpp
    gui/window/window_manager.cpp
    gui/window/menu_window.cpp
    gui/gui.cpp
    gui/window/pick_up_window.cpp
    gui/window/text_window/text_window.cpp
    gui/window/text_window/resizeable_text_window.cpp    
    gui/window/text_window/fixed_size_text_window.cpp
    utils/target_selector/executor_selector.cpp
    utils/target_selector/single_neighbour_selector.cpp
    utils/target_selector/target_selector.cpp
    utils/target_selector/single_range_selector.cpp
    utils/direction_selector.cpp
    utils/messenger.cpp
    utils/utils.cpp
    utils/configuration.cpp
    utils/dices.cpp
    utils/text_formater.cpp
    utils/base64.cpp
    world/map.cpp
    world/tile.cpp
    command_executor.cpp
    engine.cpp
    main.cpp
    actor/actor_actions/move_action.cpp
    actor/actor_actions/monster_move_action.cpp
    actor/actor_actions/attack_action.cpp
    actor/actor_actions/pickup_action.cpp
    actor/actor_actions/drop_action.cpp
    actor/actor_actions/close_action.cpp
    actor/actor_actions/open_action.cpp
    actor/actor_actions/equip_action.cpp
    actor/actor_actions/unequip_action.cpp
    actor/actor_actions/teleport_action.cpp
    actor/actor_actions/use_action.cpp
    actor/actor_actions/die_action.cpp
    actor/actor_actions/cast_action.cpp
    world/world.cpp
    rpg_system/ability_scores.cpp
    rpg_system/attack_bonus_table.cpp
    rpg_system/saving_throws_table.cpp
    rpg_system/experience_table.cpp
    rpg_system/carrying_capacity.cpp
    spells/spell.cpp
    animations/animation.cpp
    animations/blink.cpp
    animations/throw.cpp
)

add_library(amarlon_core STATIC ${SOURCE_FILES} ${HEADER_FILES})
target_link_libraries(amarlon_core ${TCOD_LIBRARIES})

add_executable(amarlon main.cpp)
target_link_libraries(amarlon amarlon_core amarlon_widgets ${TCOD_LIBRARIES})

add_custom_command(TARGET amarlon POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/resources $<TARGET_FILE_DIR:amarlon>)
